--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -6,7 +6,7 @@
 
     <br>
     <section id="instrucitons" class="bg-info text-center">
-        <h1 style="color: white">Welcome to the School of Electronics</h1>
+        <h1 style="color: white">Welcome to School of Electronics</h1>
 
         <h3 class="card-title">Instructions</h3>
         <p >
